<resources>
    <string name="app_name">HW</string>
    <string name="hello">Hello World! This is\'t my first project on Android ever and I am going to enjoy it!!!</string>
    <string name="agreement_full_text">By pressing next button you confirm the agreement and privacy policy</string>
    <string name="confidential_info">agreement</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="ic_description">ic_description</string>
    <string name="login">Login</string>
    <string name="invalid_email_message">Invalid email</string>
    <string name="valid_email_message">Valid email</string>
    <string name="password">Password</string>
    <string name="attention">Attation</string>
    <string name="service_is_unavailable">Service is unavailable</string>
    <string name="close_button">close button</string>
</resources>