<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/dimen_small"
            android:paddingEnd="@dimen/dimen_small"
            android:paddingTop="@dimen/dimen_small"
            android:text="@string/attention"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_margin="@dimen/dimen_small"
            android:background="?selectableItemBackground"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_small"
        android:text="@string/service_is_unavailable"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

</LinearLayout>